--- a/Tests/Test1/description
+++ b/Tests/Test1/description
@@ -1,1 +1,1 @@
-Ce test permet de vérifier la production d'un fichier en sortie du programme testé
+Teste le cas où le fichier log n'est pas spécifié
