--- a/Tests/Test6/description
+++ b/Tests/Test6/description
@@ -1,1 +1,1 @@
-Ce test permet de vérifier la production de deux fichiers en sortie du programme testé
+Teste le cas où le paramètre -t a été donné avec une valeur non numérique
